# coding-interview-guide

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/01.stack_and_queue/: 01.get_min_stack.cc  02.two_stack_queue.cc  03.recurse_reverse_stack.cc  04.cat_dog_queue.cc  05.stack_sort.cc  06.hanoi_problem_using_stack.cc  07.gen_max_array_in_window.cc  08.monotone_stack.cc  09.max_sub_matrix.cc  10.find_arr_max_sub_min_le_num.cc  11.visable_peak_number.cc
src/02.linked_list/: 01.ordered_linked_lists_public_parts.cc  02.delete_reversed_kth_node.cc  03.delete_a_div_b_node.cc  04.reverse_linked_list.cc  05.reverse_part_of_linked_list.cc  06.joseph_problem.cc  07.palindrome_linked_list.cc  08.divide_linked_list.cc  09.copy_rand_node_linked_list.cc  10.add_two_linked_list.cc  11.linked_list_intersection.cc  12.reverse_linked_list_by_k.cc  13.delete_repeat_value_node.cc  14.delete_certain_val_node.cc  15.bst_to_double_linked_list.cc  16.select_sort_linked_list.cc  17.strange_delete_node_method.cc  18.insert_node_to_order_linked_list.cc  19.merge_order_linked_list.cc  20.reorder_linked_list_with_lr_part.cc
src/03.binary_tree/: 01.traverse_binary_tree.cc  02.min_depth_for_binary_tree.cc  03.print_binary_tree_elegantly.cc  04.binary_tree_serialization.cc  05.max_path_length_for_sum.cc  06.find_max_bst.cc  07.find_max_bst_topology.cc  08.level_and_zigzag_print.cc  09.find_error_node_in_bst.cc  10.topology_intersection.cc  11.topology_same.cc  12.is_balanced_binary_tree.cc  13.reconstruct_bst_using_arr.cc  13.reconstruct_bst_using_post_order_arr.cc  14.is_bst_or_cbt.cc  (+10 more)
(+461 files in other folders)
